@@ -17,6 +17,8 @@
 - Rewrite all tests using [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] library.
 - Allow to correct and save the word in one pass (see #66).
 - New action - =stop= allowing to leave the point at the misspelled word.
+- =skip= action now allows to correct 'next' word even if rapid mode is not
+  enabled (#58).
 
 * v0.6.1
 
